noinst_LTLIBRARIES = libvivified-core.la

libvivified_core_la_CFLAGS = $(GLOBAL_CFLAGS) $(SWFDEC_GTK_CFLAGS) $(VIVI_CFLAGS)
libvivified_core_la_LDFLAGS = $(SWFDEC_GTK_LIBS) $(VIVI_LIBS)

libvivified_core_la_SOURCES = \
	vivi_application.c \
	vivi_ming.c

noinst_HEADERS = \
	vivi_application.h \
	vivi_ming.h \
	vivified-core.h
