noinst_LTLIBRARIES = libvivified-dock.la

libvivified_dock_la_CFLAGS = $(GLOBAL_CFLAGS) $(GTK_CFLAGS)
libvivified_dock_la_LDFLAGS = $(GTK_LIBS)

libvivified_dock_la_SOURCES = \
	vivi_docker.c \
	vivi_docklet.c \
	vivi_vdock.c

noinst_HEADERS = \
	vivi_docker.h \
	vivi_docklet.h \
	vivi_vdock.h \
	vivified-dock.h
